Update to aspectj-maven-plugin 1.15.0, remove --add-opens since its not necessary any longer